--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,23 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <header>
-        NAGŁÓWEK
+        <h1>
+            PORTFOLIO BARTOSZ BIERNACKI
+
+        </h1>
     </header>
         <nav>
-        NAWIGACJA
+
+        <ul>
+           <li>O mnie</li> 
+           <li>Umiejętności</i></li>
+           <li>Kontakt</li>
+        </ul>
     </nav>
+
+    <header>
+        <h2>O mnie:</h2>
+
+    </header>
+
     <main> 
-        CONTENT
+        <img src="Pies.jpg" alt= "PERSONAL IMAGE"/>
     </main>
 
 
     <article>
         <header>
             NAGŁÓWEK AUTONOMICZNEEJ CZĘŚCI STRONY
+
+
+
         </header>
+        <table border="2">
+            <thead>
+                <th>LP.</th>
+                <th></th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>HTML</td>
+                    <td>⭐️ ⭐️  </td>
+                </tr>
+                <tr>
+                    <td>OTHER</td>
+                    <td>⭐️ ⭐️ ⭐️ </td>
+                </tr>
+
+
+            </tbody>
+            
+
+        </table>
     </article>
     
     <section>
