--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <header>
+     <header class="bodyHeader">
         <h1>
             PORTFOLIO BARTOSZ BIERNACKI
 
@@ -27,7 +27,7 @@
         <h2>O mnie:</h2>
 
     </header>
-
+        
     <main> 
         <img src="Pies.jpg" alt= "PERSONAL IMAGE"/>
     </main>
@@ -43,14 +43,17 @@
         <table border="2">
             <thead>
                 <th>LP.</th>
-                <th></th>
+                <th>TECHNOLOGIA</th>
+                <th>BIEGŁOŚĆ</th>
             </thead>
             <tbody>
                 <tr>
+                    <td>1.</td>
                     <td>HTML</td>
                     <td>⭐️ ⭐️  </td>
                 </tr>
                 <tr>
+                    <td>2.</td>
                     <td>OTHER</td>
                     <td>⭐️ ⭐️ ⭐️ </td>
                 </tr>
@@ -63,7 +66,12 @@
     </article>
     
     <section>
-        TEMATYCZNIE ZGRUPOWANY KONTENT
+        <Form>
+            <input type="email" placeholder="email" >
+            <input type="text" placeholder="temat">
+            <textarea cols="30" rows="10"></textarea>
+            <input type="submit" value="wyślij">
+        </Form>
     </section>
 
    
