--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,7 +41,7 @@
         
     <main id="about" class="wrapper">
         <header>
-            <h2>O mnie:</h2>
+            <h2>O MNIE:</h2>
         </header> 
         <img src="Pies.jpg" alt= "PERSONAL IMAGE"/>
     </main>
