--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,25 @@
             PORTFOLIO BARTOSZ BIERNACKI
 
         </h1>
+        <nav>
+            <input type="checkbox" id="toggler">
+            <label for="toggler">
+              <div></div>
+              <div></div>
+              <div></div>
+            </label>
+        <ul>
+            <li>
+                <a href="#about">O MNIE</a>
+              </li>
+              <li>
+                <a href="#skills">UMIĘTNOŚCI</a>
+              </li>
+              <li>
+                <a href="#contact">KONTAKT</a>
+              </li>
+        </ul>
+    </nav>
     </header>
         <nav>
             <input type="checkbox" id="toggler">
