--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -158,7 +158,7 @@
                 <a href="#contact">KONTAKT</a>
             </li>
         </ol>
-        STOPKA
+        Copyright © 2022
     </footer>
 </body>
 </html>
