--- a/Egzamin/index.html
+++ b/Egzamin/index.html
@@ -15,21 +15,26 @@
     <table border="4">
         <thead>
             <tr>
-                <th>LP.</th>
-                <th>TECHNOLOGIA</th>
-                <th>BIEGŁOŚĆ</th>
+                <th>Imię</th>
+                <th>Miasto</th>
+                <th>Wiek</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>1.</td>
-                <td>HTML</td>
-                <td>⭐️ ⭐️  </td>
+                <td>Barbara Kowalska</td>
+                <td>Kraków</td>
+                <td>54</td>
             </tr>
             <tr>
-                <td>2.</td>
-                <td>OTHER</td>
-                <td>⭐️ ⭐️ ⭐️ </td>
+                <td>Jacek Tarnowski</td>
+                <td>Szczecin</td>
+                <td>45</td>
+            </tr>
+            <tr>
+                <td>Agnieszka Lipińska</td>
+                <td>Katowice</td>
+                <td>28</td>
             </tr>
             
             
