--- a/Egzamin/index.html
+++ b/Egzamin/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <table border="4">
+   <header>
+    <h1>Tabelka / Lista osób zapisanych na kurs.</h1>
+   </header>
+    <table border="10">
         <thead>
             <tr>
                 <th>Imię</th>
