--- a/bootstrap/example.html
+++ b/bootstrap/example.html
@@ -53,7 +53,7 @@
 
     <div class="carousel-item active">
       <picture>
-        <source media="(max-width:768px)" srcset="img/kebs1_mobile.webp">
+        <source media="(max-width:768px)" srcset="https://raw.githubusercontent.com/apietryga/kurs/master/bootstrap/img/kebs1_mobile.webp">
         <img src="kebs menu.webp" class="d-block w-100" alt="KEBAB JEDEN">
       </picture>
 
@@ -66,7 +66,7 @@
 
     <div class="carousel-item">
       <picture>
-        <source media="(max-width:768px)" srcset="img/kebs1_mobile.webp">
+        <source media="(max-width:768px)" srcset="https://raw.githubusercontent.com/apietryga/kurs/master/bootstrap/img/kebs1_mobile.webp">
         <img src="kebs menu.webp" class="d-block w-100" alt="KEBAB JEDEN">
       </picture>
       <div class="carousel-caption text-center">
@@ -77,7 +77,7 @@
 
     <div class="carousel-item">
       <picture>
-        <source media="(max-width:768px)" srcset="img/kebs1_mobile.webp">
+        <source media="(max-width:768px)" srcset="https://raw.githubusercontent.com/apietryga/kurs/master/bootstrap/img/kebs1_mobile.webp">
         <img src="kebs menu.webp" class="d-block w-100" alt="KEBAB JEDEN">
       </picture>
       <div class="carousel-caption text-start">
