--- a/javascript/index.html
+++ b/javascript/index.html
@@ -36,7 +36,7 @@
     </header>
     <div class="carousel">
       <div class="left"> &LeftArrow; </div>
-      <img src="img/informatyk1.jpg" alt="ZDJĘCIE WIDOKU">
+      <img src="informatyk1.jpg" alt="ZDJĘCIE WIDOKU">
       <div class="right"> &RightArrow; </div>
     </div>
   </main>
