--- a/gra/index.html
+++ b/gra/index.html
@@ -6,8 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="scripts.js" defer></script>
+    <style>
+        *{box-sizing: border-box;}
+      body{
+        margin:0;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        height:100vh;
+    }
+      .gamePlane{
+        border:5px solid red;
+        width:90vw;
+        height:90vh;
+    }
+
+    </style>
 </head>
 <body>
-    
+    <div class="gamePlane"></div>
 </body>
 </html>
