--- a/weather/index.html
+++ b/weather/index.html
@@ -11,8 +11,20 @@
 <body>
   <header>
     <div class="searchLocation">
-      <input type="text" id="location" value="Dubaj">
+     <input 
+       value="Alicante"
+       type="text" 
+       id="location" 
+       onclick="this.value=''"
+       placeholder="Lokalizacja"
+      />
       <button onclick="getLatLonDependOfName()">SZUKAJ</button>
+    </div>
+
+    <div class="outerSwitch">
+      <div class="switch">
+        <div class="innerSwitch"></div>
+      </div>
     </div>
   </header>
 
@@ -34,6 +46,7 @@
         id="range" 
         min="0" 
         max="39"
+        value="0"
         onchange="changeCubeInfo(this.value)"
         onmousemove="changeCubeInfo(this.value)"
         ontouchmove="changeCubeInfo(this.value)"
